Fix on spacing for new tab links in footer

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -36,6 +36,10 @@ footer {
             position: relative;
             left: 0;
 
+            &::after {
+              margin-left: .1rem;
+            }
+
             &:hover {
               left: .25rem;
             }
